rnsc/test_data/integration/error/parser/type_hints/class/trailing_token_recovers.rns
.class @class value unexpected_second_operand ; <- this error shouldn't block no superclass warn